TermsofService Index view UpdateS

--- a/src/za.co.grindrodbank.a3s-identity-server/Views/TermsOfService/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/TermsOfService/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TermsOfServiceViewModel
 
-<h1>Terms of Service Agreements.</h1>
-<p>@Html.Raw($"{Model.AgreementCount} remaining.")</p>
+<h1>Terms of Service Agreements (@Model.AgreementCount)</h1>
+<p></p>
 
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -9,7 +9,7 @@
     </div>
 
     <div class="panel-body">
-        @Model.HtmlContents
+        @Html.Raw(Model.HtmlContents)
     </div>
 </div>
 
