--- a/src/za.co.grindrodbank.a3s/Views/Home/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    var version = typeof(za.co.grindrodbank.a3s.A3SConstants).Assembly.GetName().Version.ToString();
+    var version = typeof(za.co.grindrodbank.a3s.Program).Assembly.GetName().Version.ToString();
 }
 
 <div class="welcome-page">
