Reject process test and code updates

--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Home/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 <img class="icon" src="~/icon.jpg">
                 Welcome to IdentityServer4
                 <small>(version @version) </small>
-                <small><i>implemented by A3S</i></small>
+                <small><i>used and customized by A3S</i></small>
             </h1>
         </div>
     </div>
