--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </button>
                 <span class="navbar-brand">
                     <img src="~/icon.png" class="icon-banner">
-                    IdentityServer4 implemented by A3S
+                    IdentityServer4 used and customized by A3S
                 </span>
             </div>
         </div>
