Implementing Agreement specific styling with test case updates

--- a/src/za.co.grindrodbank.a3s-identity-server/Views/TermsOfService/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/TermsOfService/Index.cshtml
@@ -8,7 +8,8 @@
         <h3 class="panel-title">@Model.AgreementName</h3>
     </div>
 
-    <div class="panel-body">
+    <div class="panel-body" id="terms-body">
+        @Html.Raw($"<style>{Model.CssContents}</style>")
         @Html.Raw(Model.HtmlContents)
     </div>
 </div>
