--- a/src/za.co.grindrodbank.a3s-identity-server/Views/TermsOfService/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/TermsOfService/Index.cshtml
@@ -18,7 +18,7 @@
     <p>
         @Html.CheckBoxFor(x => x.Accepted)&nbsp; @Html.LabelFor(x => x.Accepted) 
     </p>
-    <button class="btn btn-primary" name="button" id="btnAccept" value="accept" disabled="disabled">Accept</button>
+    <button class="btn btn-default" name="button" id="btnAccept" value="accept" disabled="disabled">Accept</button>
     <button class="btn btn-default" name="button" id="btnReject" value="reject">Reject</button>
 
     <input type="hidden" name="ReturnUrl" id="ReturnUrl" value="@Model.ReturnUrl" />
