--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Verify2FAOTP.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Verify2FAOTP.cshtml
@@ -22,7 +22,7 @@
                             <fieldset>
                                 <div class="form-group">
                                     <label asp-for="OTP"></label>
-                                    <input class="form-control" placeholder="OTP" asp-for="OTP" autofocus>
+                                    <input class="form-control" placeholder="OTP" asp-for="OTP" autocomplete="off" autofocus>
                                 </div>
 
                                 <div class="form-group">
