Project landing page updates with A3S logo and styling

--- a/src/za.co.grindrodbank.a3s/Views/Shared/_Layout.cshtml
+++ b/src/za.co.grindrodbank.a3s/Views/Shared/_Layout.cshtml
@@ -19,13 +19,12 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <nav class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">A3S</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <span class="navbar-brand">
+                        <img src="~/a3s_logo_icon_only_32.png" class="icon-banner">
+                        A3S management API
+                    </span>
                 </div>
             </nav>
         </header>
