--- a/src/za.co.grindrodbank.a3s/Views/Home/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <div class="row page-header">
         <div class="col-sm-10">
             <h1>
+                <img class="icon" src="~/a3s_logo_icon_only_64.png">
                 Welcome to A3S
                 <small>(version @version) </small>
             </h1>
