--- a/src/za.co.grindrodbank.a3s/wwwroot/css/site.css
+++ b/src/za.co.grindrodbank.a3s/wwwroot/css/site.css
@@ -7,6 +7,12 @@ a.navbar-brand {
     word-break: break-all;
 }
 
+.navbar-brand {
+  position: relative;
+  top: -2px;
+  display: inline;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
