--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A3S</title>
+    <title>IdentityServer4 used and customized by A3S</title>
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
@@ -22,12 +22,6 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <span class="navbar-brand">
                     <img src="~/icon.png" class="icon-banner">
                     IdentityServer4 used and customized by A3S
