--- a/src/za.co.grindrodbank.a3s/Views/Shared/_Layout.cshtml
+++ b/src/za.co.grindrodbank.a3s/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>A3S Management API</title>
+        <link rel="icon" type="image/x-icon" href="~/favicon.png" />
 
         <environment include="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
