small spelling fixes to aspects of the home page.

--- a/src/za.co.grindrodbank.a3s/Views/Home/Index.cshtml
+++ b/src/za.co.grindrodbank.a3s/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <div class="col-sm-8">
             <p>
                 <i>
-                    An enterprise framework that makes effortless management of centralized authorization, authentication, and accounting. A3S supports OpenID and OAuth 2.0 identity protocols.
+                    An enterprise framework that makes management of centralized authorization, authentication, and accounting effortless. A3S supports OpenID connet and OAuth 2.0 protocols.
                 </i>
             </p>
         </div>
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col-sm-8">
             <h1>Introduction</h1>
-            <p>Being able to log in once and securely gain access to a variaty of shared or stand-alone resources is one of the most important parts of developing an enterprise system. Additionally, effectively determining permissions to said resources is equally important. Finally, ensuring that both these concepts are implemented with the best security and engineering practices is vital to ensure your central users and protect resources are safe against theft and break-in attempts.</p>
+            <p>Being able to log in once and securely gain access to a variety of shared or stand-alone resources is one of the most important parts of developing an enterprise system. Additionally, effectively determining permissions to said resources is equally important. Finally, ensuring that both these concepts are implemented with the best security and engineering practices is vital to ensure your central users and protect resources are safe against theft and break-in attempts.</p>
             <p>A3S makes this process simple for any project by offering all this right out of the box. It can be deployed on virtually any system, and integrate with virtually any technology.</p>
         </div>
     </div>
