Updates the OAS3 controller generation template to now name all routes with the OAS3 operation ID. Updated the pagination helper to generate all relative URLs for the pagination result set using route names. Updated the logic within the pagination helper header generates to assume the first page is always page 1, rather than 0. Regenerated all the abstract API controllers with route names.

--- a/.openapi-generator/templates/aspnetcore/2.1/controller.mustache
+++ b/.openapi-generator/templates/aspnetcore/2.1/controller.mustache
@@ -33,7 +33,7 @@ namespace {{apiPackage}}
         /// <param name="{{paramName}}">{{description}}</param>{{/allParams}}{{#responses}}
         /// <response code="{{code}}">{{message}}</response>{{/responses}}
         [{{httpMethod}}]
-        [Route("{{{basePathWithoutHost}}}{{{path}}}")]{{#hasAuthMethods}}{{#authMethods}}{{#isApiKey}}
+        [Route("{{{basePathWithoutHost}}}{{{path}}}", Name = "{{operationId}}")]{{#hasAuthMethods}}{{#authMethods}}{{#isApiKey}}
         [Authorize(Policy = "{{name}}")]{{/isApiKey}}{{#isBasicBearer}}
         [Authorize{{#hasScopes}}(Roles = "{{#scopes}}{{scope}}{{#hasMore}},{{/hasMore}}{{/scopes}}"){{/hasScopes}}]{{/isBasicBearer}}{{/authMethods}}{{/hasAuthMethods}}
         [ValidateModelState]{{#useSwashbuckle}}
