--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
@@ -20,18 +20,8 @@
     <link rel="stylesheet" href="~/css/a3s.css" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <span class="navbar-brand">
-                    <img src="~/icon.png" class="icon-banner">
-                    IdentityServer4 used and customized by A3S
-                </span>
-            </div>
-        </div>
-    </div>
 
-    <div class="container body-content">
+    <div class="login-float-outer">
         @RenderBody()
     </div>
 
