--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
@@ -1,79 +1,64 @@
 ﻿@model LoginViewModel
 
-    <partial name="_ValidationSummary" />
 
 
-        @if (Model.EnableLocalLogin)
-        {
-                <div class="login-float-inner">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Local Login</h3>
-                    </div>
-                    <div class="panel-body">
+@if (Model.EnableLocalLogin)
+{
 
-                        <form asp-route="Login">
-                            <input type="hidden" asp-for="ReturnUrl" />
+    <div class="login-float-inner">
+        <br />&nbsp;<br />
 
-                            <fieldset>
-                                <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <input class="form-control" placeholder="Username" asp-for="Username" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Password"></label>
-                                    <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
-                                </div>
-                                @if (Model.AllowRememberLogin)
-                                {
-                                    <div class="form-group login-remember">
-                                        <label asp-for="RememberLogin">
-                                            <input asp-for="RememberLogin">
-                                            <strong>Remember My Login</strong>
-                                        </label>
-                                    </div>
-                                }
+        <div><img src="~/img/a3s.svg" /></div>
+        <div class="a3s-title">A3S</div>
 
-                                <div class="form-group">
-                                    <button class="btn btn-primary" name="button" value="login">Login</button>
-                                    <button class="btn btn-default" name="button" value="cancel">Cancel</button>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-        }
+        <br />&nbsp;<br />
+        <form asp-route="Login">
+            <input type="hidden" asp-for="ReturnUrl" />
 
-        @if (Model.VisibleExternalProviders.Any())
-        {
-            <div class="col-md-6 col-sm-6 external-providers">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">External Login</h3>
-                    </div>
-                    <div class="panel-body">
-                        <ul class="list-inline">
-                            @foreach (var provider in Model.VisibleExternalProviders)
-                            {
-                                <li>
-                                    <a class="btn btn-default"
-                                       asp-controller="External"
-                                       asp-action="Challenge"
-                                       asp-route-provider="@provider.AuthenticationScheme"
-                                       asp-route-returnUrl="@Model.ReturnUrl">
-                                        @provider.DisplayName
-                                    </a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </div>
+            <div><input class="form-control text-box" placeholder="Username" type="text" asp-for="Username" autofocus></div>
+            <div><input class="form-control text-box" placeholder="Username" type="password" asp-for="Password" autocomplete="off"></div>
+
+            <div class="right-align">
+                <button class="large-button" name="button" value="login">Log in</button>
             </div>
-        }
+        </form>
 
-        @if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
-        {
-            <div class="alert alert-warning">
-                <strong>Invalid login request</strong>
-                There are no login schemes configured for this client.
+        <partial name="_ValidationSummary" />
+    </div>
+
+}
+
+@if (Model.VisibleExternalProviders.Any())
+{
+    <div class="col-md-6 col-sm-6 external-providers">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">External Login</h3>
             </div>
-        }
+            <div class="panel-body">
+                <ul class="list-inline">
+                    @foreach (var provider in Model.VisibleExternalProviders)
+                    {
+                        <li>
+                            <a class="btn btn-default"
+                               asp-controller="External"
+                               asp-action="Challenge"
+                               asp-route-provider="@provider.AuthenticationScheme"
+                               asp-route-returnUrl="@Model.ReturnUrl">
+                                @provider.DisplayName
+                            </a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
+    </div>
+}
+
+@if (!Model.EnableLocalLogin && !Model.VisibleExternalProviders.Any())
+{
+    <div class="alert alert-warning">
+        <strong>Invalid login request</strong>
+        There are no login schemes configured for this client.
+    </div>
+}
