--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
@@ -8,15 +8,19 @@
     <div class="login-float-inner">
         <br />&nbsp;<br />
 
-        <div><img src="~/img/a3s.svg" /></div>
+        <div><img src="~/img/a3s.png" class="a3s-big-logo" /></div>
         <div class="a3s-title">A3S</div>
+        <br />&nbsp;<br />
+        <div><img src="~/img/GB_logo_navy.svg" class="gbl-logo" /></div>
 
         <br />&nbsp;<br />
         <form asp-route="Login">
             <input type="hidden" asp-for="ReturnUrl" />
 
             <div><input class="form-control text-box" placeholder="Username" type="text" asp-for="Username" autofocus></div>
-            <div><input class="form-control text-box" placeholder="Username" type="password" asp-for="Password" autocomplete="off"></div>
+            <div><input class="form-control text-box" placeholder="Password" type="password" asp-for="Password" autocomplete="off"></div>
+
+            <br />&nbsp;<br />
 
             <div class="right-align">
                 <button class="large-button" name="button" value="login">Log in</button>
