Login successful final styling.

--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 @if (Model.EnableLocalLogin)
 {
 
-    <div class="login-float-inner">
+    <div class="login-float-inner fifty-percent-alpha-background">
         <br />&nbsp;<br />
 
         <div><img src="~/img/a3s.png" class="a3s-big-logo" /></div>
@@ -23,7 +23,7 @@
             <br />&nbsp;<br />
 
             <div class="right-align">
-                <button class="large-button" name="button" value="login">Log in</button>
+                <button class="login-button" name="button" value="login">Log in</button>
             </div>
         </form>
 
