--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
             <br />&nbsp;<br />
 
             <div class="right-align">
-                <button class="login-button" name="button" value="login">Log in</button>
+                <button class="spoon-btn-primary" name="button" value="login">Log in</button>
             </div>
         </form>
 
