--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IdentityServer4 used and customized by A3S</title>
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
+    <title>A3S</title>
+    <link rel="icon" type="image/x-icon" href="~/favicon.png" />
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
