Rename of files for additional logo.

--- a/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
+++ b/src/za.co.grindrodbank.a3s-identity-server/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
         <div><img src="~/img/a3s.png" class="a3s-big-logo" /></div>
         <div class="a3s-title">A3S</div>
         <br />&nbsp;<br />
-        <div><img src="~/img/GB_logo_navy.svg" class="gbl-logo" /></div>
+        <div><img src="~/img/additional-logo.svg" class="additional-logo" /></div>
 
         <br />&nbsp;<br />
         <form asp-route="Login">
